// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverProvider renders with popover 1`] = `
<body>
  <div>
    <div
      data-testid="input"
    >
      Input
    </div>
  </div>
  <div
    class="container"
    style="position: fixed; overflow: visible; top: 0px; left: 0px;"
  >
    <div
      data-testid="wrapper"
    >
      <div
        data-testid="datepicker"
      >
        Datepicker
      </div>
    </div>
  </div>
</body>
`;

exports[`PopoverProvider renders without popover 1`] = `
<body>
  <div>
    <div
      data-testid="input"
    >
      Input
    </div>
  </div>
</body>
`;
